--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
                 <div class="video-card">
             <div class="video-wrapper">
-                    <video controls poster="video/Screenshot 2025-06-24 133613.png">
-                        <source src="video/YESHARA VIDEO (5).mp4" type="video/mp4">
+                    <video controls poster="assets/images/yehvid.png">
+                        <source src="assets/video/yesharavideo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -148,8 +148,8 @@
 
                <div class="video-card">
             <div class="video-wrapper">
-                    <video controls poster="video/Screenshot 2025-06-26 143543.png">
-                        <source src="video/vid2.mp4" type="video/mp4">
+                    <video controls poster="assets/images/yeshvid2pic.png">
+                        <source src="assets/video/vid2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -165,8 +165,8 @@
         <!-- Video 2 -->
         <div class="video-card">
             <div class="video-wrapper">
-            <video controls poster="video/Screenshot 2025-06-24 133652.png">
-                <source src="video/IMC.mp4" type="video/mp4">
+            <video controls poster="assets/images/impcooinpic.png">
+                <source src="assets/video/imcvid.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -184,8 +184,8 @@
         <!-- Video 3 -->
         <div class="video-card video-card-small">
             <div class="video-wrapper" >
-                <video controls poster="video/Screenshot 2025-06-24 133712.png">
-                    <source src="video/Black and Yellow Modern Clean Business Service Information Mobile Video (3).mp4" type="video/mp4">
+                <video controls poster="assets/images/cometpic.png">
+                    <source src="assets/video/Comet App.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -209,8 +209,8 @@
         <!-- Video 3 -->
         <div class="video-card video-card-small">
             <div class="video-wrapper" >
-                <video controls poster="video/Screenshot from 2025-08-28 14-02-19.png">
-                    <source src="video/IMpala bot (6).mp4" type="video/mp4">
+                <video controls poster="assets/images/whattspic.png">
+                    <source src="assets/video/whatbotvid.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
